# cheesemap

./: .bazelrc  .clangd  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README  README.md  benchmarks.html  cheesemap.c  cheesemap.cc  cheesemap.h  cheesemap_test.c  cm-demo.c  makefile
benches/: BUILD.bazel  CMakeLists.txt  SPEC.txt  abseil_bench.cc  abseil_bench.cpp  bench_common.h  bench_common.hpp  cheesemap_bench.cc  cheesemap_bench.cpp  cheesemap_old_bench.cc  common.h  khash_bench.cc  klib_bench.cc  klib_bench.cpp  plot.py  results.py  std_unordered_map_bench.cc  tidwall_bench.cc  tidwall_bench.cpp  unordered_map_bench.cc  unordered_map_bench.cpp
benches/cheesemap_old/: BUILD.bazel  CMakeLists.txt  cheesemap.h
old/: cheesemap.c
